# KOPernicus

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  mcp-config.json  pyproject.toml  test_nodes.py  verify_json_hardening.py  verify_planning_flow.py
docs/: README.md  architecture.md  next-steps.md
scripts/: start_servers.py
src/kopernicus_agent/: intro.py  llm.py  logging_config.py  main.py  mcp_util.py  nodes.py  prompts.py  server.py  state.py  utils.py  workflow.py
src/kopernicus_agent/tests/: test_intial_plan.py  test_logging.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: ChatInterface.tsx  GraphVisualizer.tsx
