[project]
name = "kopernicus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.6",
    "langchain-google-genai>=4.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
]
