[project]
name = "kopernicus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biolink-mcp",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.6",
    "langchain-google-genai>=4.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "langserve>=0.3.3",
    "name-resolver-mcp",
    "nodenormalizer-mcp",
    "pydantic>=2.12.5",
    "robokop-mcp",
    "sse-starlette>=3.1.2",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
biolink-mcp = { git = "https://github.com/cbizon/RoboMCP.git", subdirectory = "biolink-mcp" }
name-resolver-mcp = { git = "https://github.com/cbizon/RoboMCP.git", subdirectory = "name-resolver-mcp" }
nodenormalizer-mcp = { git = "https://github.com/cbizon/RoboMCP.git", subdirectory = "nodenormalizer-mcp" }
robokop-mcp = { git = "https://github.com/cbizon/RoboMCP.git", subdirectory = "robokop-mcp" }
